# aws_dynamo_import

./: README.md  import.py  main.py  pyproject.toml  requirements.txt
